--- a/.github/workflows/qodana.yml
+++ b/.github/workflows/qodana.yml
@@ -1,28 +1,24 @@
 name: Qodana
 
 on:
-  push:
-    branches:
-      - main
+  workflow_dispatch:
   pull_request:
+  push:
     branches:
       - main
 
 jobs:
   qodana:
     runs-on: ubuntu-latest
-
+    permissions:
+      contents: write
+      pull-requests: write
+      checks: write
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
 
       - name: Run Qodana
-        uses: JetBrains/qodana-action@v2023.1.1
-        with:
-          linter: jetbrains/qodana-jvm:latest
-
-      - name: Upload Qodana report
-        uses: actions/upload-artifact@v3
-        with:
-          name: qodana-report
-          path: qodana-report/
+        uses: JetBrains/qodana-action@v2024.1
